# e-learning-platform

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .gitignore  Dockerfile  mypy.ini  pyproject.toml
backend/authentication/: models.py  serializers.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py
backend/code_generate/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/code_generate/migrations/: 0001_initial.py  0002_alter_code_code_coursejoincode.py
backend/core/: settings.py  urls.py
backend/course/: admin.py  models.py  serializers.py  views.py
backend/course/migrations/: 0001_initial.py  0002_lesson.py  0003_rename_pdf_file_lesson_pdf_url_and_more.py  0004_coursefeedback_sitefeedback_alter_course_description_and_more.py
backend/exam/: admin.py  models.py  serializers.py  views.py
backend/exam/migrations/: 0001_initial.py  0002_alter_exam_course_alter_examquestion_exam.py  0003_userexam.py
backend/generate_codes/: permissions.py  views.py
backend/rating/: admin.py  models.py  serializers.py  views.py
backend/rating/migrations/: 0001_initial.py
frontend/: .env.example  .eslintrc  .gitignore  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  styles.scss
frontend/src/apis/: e-learning-platform.api.ts  index.ts
frontend/src/assets/: index.ts  routerPaths.ts
frontend/src/components/: App.scss  App.tsx
frontend/src/hooks/: state.ts
frontend/src/services/: auth.ts  code-generation.ts  contact.ts  course.ts  (+5 more)
(+155 files in other folders)
